Wikipedia tracking New output templating New user entry features New user entry fetch mode

--- a/app/views/twitter.block.date-chart.html
+++ b/app/views/twitter.block.date-chart.html
@@ -258,7 +258,7 @@
 						enabled:false
 					}
 				},
-				series: [to_load[i].data]
+				series: to_load[i].data
 			}
 			if(i < 2) {
 				config_chart.yAxis.allowDecimals = false;
