Made the link to Twitter entry nice

--- a/app/views/twitter.block.userentry.html
+++ b/app/views/twitter.block.userentry.html
@@ -13,7 +13,11 @@
 					</div>
 					<div style="margin-left:3%;">
 						<h4 class="brief" style="font-size:1.1em;color:#EEE;margin-bottom:4px;">
-							<i>@<a href="https://www.twitter.com/{{screen_name}}" target="_blank" style="color:white!important;">{{screen_name}}</a></i>
+							<a href="https://www.twitter.com/{{screen_name}}" target="_blank" style="color:white!important;">
+								<i class="fa fa-link" style="color:red;font-size:.8em;"></i>
+								{{screen_name}}
+								
+							</a>
 						</h4>
 						{{buttons}}
 					</div>
